# Frequency-Counter

./: CMakeLists.txt
cpp/: CMakeLists.txt  Main.cpp  test.cpp
cpp/src/: FrequencyCounter.cpp  FrequencyCounterFunctions.cpp  FrequencyCounterFunctions.hpp  Main.cpp  Main.h
cpp/test/: Tests.cpp  Tests.h  catch.hpp
data/: 1984.txt
java/src/: FrequencyCounter.java  Load.java
java/tests/: FrequencyCounterTester.java
